[package]
name = "keylogger"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
log = "0.4"

[dependencies.windows]
version = "0.58.0"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
]